@@ -13,7 +13,7 @@ int ATOMallocate(const char *nme);
 int ATOMcmp(int id, const void *v_1, const void *v_2);
 ptr ATOMdup(int id, const void *val);
 bte ATOMelmshift(int sz);
-ssize_t ATOMformat(int id, const void *val, char **buf);
+char *ATOMformat(int id, const void *val);
 int ATOMindex(const char *nme);
 size_t ATOMlen(int id, const void *v);
 str ATOMname(int id);
@@ -330,7 +330,7 @@ int VALcmp(const ValRecord *p, const ValRecord *q);
 ptr VALconvert(int typ, ValPtr t);
 ValPtr VALcopy(ValPtr dst, const ValRecord *src);
 void VALempty(ValPtr v);
-ssize_t VALformat(char **buf, const ValRecord *res);
+char *VALformat(const ValRecord *res);
 void *VALget(ValPtr v);
 ValPtr VALinit(ValPtr d, int tpe, const void *s);
 int VALisnil(const ValRecord *v);
